fixed course card alignment

--- a/TeamWebApplication/wwwroot/css/CoursesStyle.css
+++ b/TeamWebApplication/wwwroot/css/CoursesStyle.css
@@ -124,7 +124,7 @@ body {
 
 .container {
     background-color: #201f20;
-    display: flex;
+    display: block;
     margin: 15px;
     margin-top: 0;
 }
@@ -138,7 +138,7 @@ body {
 }
 
 .card {
-    flex-basis: calc(33.333% - 30px);
+    flex-basis: calc(25% - 30px);
     margin: 15px;
     box-sizing: border-box;
     box-shadow: 0px 4px 10px 0px #51314e;
